--- a/src/app/student/student-add/student-add.component.html
+++ b/src/app/student/student-add/student-add.component.html
@@ -1,1 +1,72 @@
-<p>student-add works!</p>
+<div class="my-4">
+  <h1>Добавление стуента</h1>
+</div>
+<form class="p-2" [formGroup]="formStudent" (ngSubmit)='onAddStudent()'>
+  <div class="my-3 row">
+    <h3>ФИО</h3>
+    <div class="mb-3 col-6">
+      <label for="surname" class="form-label">Фамилия</label>
+      <input type="text" class="form-control" placeholder="Фамилия" formControlName="surname"
+        [ngClass]="{'is-valid': formStudent.controls['surname'].valid}">
+      <div class="form-text">Обязательное поле. Не более 30 символов.</div>
+    </div>
+
+    <div class="mb-3 col-6">
+      <label for="name" class="form-label">Имя</label>
+      <input type="text" class="form-control" placeholder="Имя" formControlName="name"
+        [ngClass]="{'is-valid': formStudent.controls['name'].valid}">
+      <div class="form-text">Обязательное поле. Не более 30 символов.</div>
+    </div>
+
+    <div class="mb-3">
+      <label for="patronymic" class="form-label">Отчество</label>
+      <input type="text" class="form-control" placeholder="Отчество" formControlName="patronymic"
+        [ngClass]="{'is-valid': formStudent.controls['patronymic'].valid && formStudent.controls['patronymic'].touched}">
+      <div class="form-text">Необязательное поле. Не более 30 символов.</div>
+    </div>
+  </div>
+
+  <div class="my-3 row">
+    <h3>Контакты и дата рождения</h3>
+    <div class="mb-3 col-6">
+      <label for="phone" class="form-label">Телефон</label>
+      <input type="text" class="form-control" placeholder="Телефон" formControlName="phone"
+        [ngClass]="{'is-valid': formStudent.controls['phone'].valid}">
+      <div class="form-text">Обязательное поле. Введите в формате +71234567890.</div>
+    </div>
+
+    <div class="mb-3 col-6">
+      <label for="email" class="form-label">Email</label>
+      <input type="text" class="form-control" placeholder="Email" formControlName="email"
+        [ngClass]="{'is-valid': formStudent.controls['email'].valid}">
+      <div class="form-text">Обязательное поле.</div>
+    </div>
+
+    <div class="mb-3">
+      <label for="dateBirth" class="form-label">Дата рождения</label>
+      <input type="date" class="form-control" formControlName="dateBirth"
+        [ngClass]="{'is-valid': formStudent.controls['dateBirth'].valid}">
+      <div class="form-text">Обязательное поле.</div>
+    </div>
+  </div>
+
+  <div class="my-3 row">
+    <h3>Информация о направлении</h3>
+    <div class="mb-3 col-6">
+      <label for="group" class="form-label">Группа</label>
+      <input type="text" class="form-control" placeholder="Группа" formControlName="group"
+        [ngClass]="{'is-valid': formStudent.controls['group'].valid}">
+      <div class="form-text">Обязательное поле. Введите в формате 111-111</div>
+    </div>
+
+    <div class="mb-3 col-6">
+      <label for="specialization" class="form-label">Направление подгоовки</label>
+      <input type="text" class="form-control" placeholder="Направление подгоовки" formControlName="specialization"
+        [ngClass]="{'is-valid': formStudent.controls['specialization'].valid}">
+      <div class="form-text">Обязательное поле. Не более 50 символов.</div>
+    </div>
+  </div>
+
+  <button type="submit" class="btn btn-primary" [disabled]="formStudent.invalid">Добавить</button>
+  <!-- <button type="submit" class="btn btn-primary">Добавить</button> -->
+</form>
