--- a/src/app/student/student-list/student-list.component.html
+++ b/src/app/student/student-list/student-list.component.html
@@ -1,1 +1,7 @@
-<p>student-list works!</p>
+<div class="my-4">
+  <h1>Список студентов</h1>
+</div>
+
+<div class="row">
+  <app-student-card class="col-6" *ngFor="let student of studentList" [myStudent]="student"></app-student-card>
+</div>
