--- a/src/app/student/student-add/student-add.component.html
+++ b/src/app/student/student-add/student-add.component.html
@@ -1,5 +1,5 @@
 <div class="my-4">
-  <h1>Добавление стуента</h1>
+  <h1>Добавление студента</h1>
 </div>
 <form class="p-2" [formGroup]="formStudent" (ngSubmit)='onAddStudent()'>
   <div class="my-3 row">
