--- a/src/app/student/student-edit/student-edit.component.html
+++ b/src/app/student/student-edit/student-edit.component.html
@@ -68,6 +68,7 @@
     </div>
   
     <button type="submit" class="btn btn-primary" [disabled]="formStudent.invalid">Принять</button>
+    <button type="button" class="btn btn-danger ms-3" (click)="onDelete()">Удалить</button>
     <!-- <button type="submit" class="btn btn-primary">Добавить</button> -->
   </form>
   
