--- a/src/app/student/student-list/student-list.component.html
+++ b/src/app/student/student-list/student-list.component.html
@@ -3,6 +3,6 @@
 </div>
 
 <div class="row">
-  <button class="btn btn-secondary my-2" (click)="updateList()">Обновить</button>
+  <button class="btn btn-secondary my-2" (click)="getStudents()">Обновить</button>
   <app-student-card class="col-6" *ngFor="let student of studentList" [myStudent]="student"></app-student-card>
 </div>
