--- a/src/app/student/student-list/student-list.component.html
+++ b/src/app/student/student-list/student-list.component.html
@@ -2,7 +2,23 @@
   <h1>Список студентов</h1>
 </div>
 
+<div class="my-2 row">
+  <div class="mb-3 col-4">
+    <label for="surname" class="form-label">Фамилия</label>
+    <input type="text" class="form-control" placeholder="Фамилия" [(ngModel)]="surname">
+  </div>
+  <div class="mb-3 col-4">
+    <label for="surname" class="form-label">Группа</label>
+    <input type="text" class="form-control" placeholder="Группа" [(ngModel)]="group">
+  </div>
+  <div class="mb-3 col-4">
+    <label for="surname" class="form-label">Направление</label>
+    <input type="text" class="form-control" placeholder="Направление" [(ngModel)]="specialization">
+  </div>
+</div>
+
 <div class="row">
   <button class="btn btn-secondary my-2" (click)="getStudents()">Обновить</button>
-  <app-student-card class="col-6" *ngFor="let student of studentList" [myStudent]="student"></app-student-card>
+  <app-student-card class="col-6" *ngFor="let student of studentList | filter: surname: group: specialization"
+    [myStudent]="student"></app-student-card>
 </div>
